src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/neq_int_A.deca
// Description :
//    test neq entre un int et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type int, A, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)
class A{}
{
int a;
A b;
boolean c = a != b;
}
